--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -14,12 +14,21 @@
   "private": true,
   "homepage": "https://github.com/neoncity/causefe#readme",
   "files": [
-    "src"
+      "out",
+      "src",
+      "webpack.config.js"
   ],
   "dependencies": {},
   "devDependencies": {
     "@neoncity/togemfury": "^0.0.2",
     "@types/node": "^7.0.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.5",
     "webpack": "^1.14.0",
