--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
 deploy:
 - provider: script
   skip_cleanup: true
-  script: $(npm bin)/togemfury --user=${GEMFURY_USER} --api_key=${GEMFURY_API_KEY}
+  script: $(npm bin)/togemfury --user ${GEMFURY_USER} --api_key ${GEMFURY_API_KEY}
