--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ install:
 - npm install --registry=https://npm-proxy.fury.io/${GEMFURY_API_KEY}/${GEMFURY_USER}/ --progress=false
 
 script:
-- true # npm run test-with-coverage
+- npm run test-with-coverage
 
-# after_success:
-# - npm run push-coverage-to-codecov
+after_success:
+- npm run push-coverage-to-codecov
 
 deploy:
 - provider: script
