--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "pretest": "webpack",
+    "test": "mocha out/server/tests.js",
+    "test-with-coverage": "webpack && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- out/server/tests.js && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
+    "push-coverage-to-codecov": "codecov -f ./out/coverage/coverage-filtered.json"
   },
   "respository": {
     "type": "git",
@@ -26,16 +30,24 @@
   },
   "devDependencies": {
     "@neoncity/common-js": "^0.0.11",
+    "@neoncity/coverage-filter": "^0.0.5",
     "@neoncity/togemfury": "^0.0.9",
+    "@types/chai": "^3.4.34",
     "@types/express": "^4.0.35",
-    "@types/node": "^7.0.0",
+    "@types/mocha": "^2.2.37",
+    "@types/node": "^7.0.1",
+    "chai": "^3.5.0",
+    "codecov": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "mocha": "^3.2.0",
+    "remap-istanbul": "^0.8.4",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.5",
