--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -26,8 +26,10 @@
   },
   "dependencies": {
     "@types/es6-promise": "0.0.32",
+    "@types/webpack-dev-middleware": "^1.9.1",
     "es6-promise": "^4.0.5",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
     "@neoncity/common-js": "^0.0.11",
@@ -37,6 +39,7 @@
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.37",
     "@types/node": "^7.0.1",
+    "@types/webpack": "^2.2.2",
     "chai": "^3.5.0",
     "codecov": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
