--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
     "build": "tsc && webpack",
+    "serve-dev": "tsc --watch & nodemon out/server/index.js",
+    "serve-prod": "node out/server/index.js",
     "pretest": "npm run build",
-    "test": "mocha $(find out -name '*-test.js')",
-    "test-with-coverage": "npm run build && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- $(find out -name '*-test.js') && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
+    "test": "npm run build && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- $(find out -name '*-test.js') && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
     "push-coverage-to-codecov": "codecov -f ./out/coverage/coverage-filtered.json"
   },
   "respository": {
@@ -51,6 +52,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "remap-istanbul": "^0.8.4",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
