--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -26,10 +26,13 @@
     "tsconfig.json": "c:tsconfig.json"
   },
   "dependencies": {
-    "@types/es6-promise": "0.0.32",
-    "@types/webpack-dev-middleware": "^1.9.1",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
     "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
@@ -37,9 +40,15 @@
     "@neoncity/coverage-filter": "^0.0.7",
     "@neoncity/togemfury": "^0.0.9",
     "@types/chai": "^3.4.34",
+    "@types/es6-promise": "0.0.32",
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.37",
     "@types/node": "^7.0.1",
+    "@types/react": "^15.0.2",
+    "@types/react-dom": "^0.14.21",
+    "@types/react-redux": "^4.4.36",
+    "@types/react-router": "^2.0.46",
+    "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack": "^2.2.2",
     "chai": "^3.5.0",
     "codecov": "^1.0.1",
