Added stuff for the auth0-widget. Soo hard it was.

--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -8,6 +8,7 @@
         "noUnusedParameters": true,
         "strictNullChecks": true,
         "sourceMap": true,
-	"jsx": "react"
+	"jsx": "react",
+	"allowSyntheticDefaultImports": true
     }
 }
