--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -26,6 +26,8 @@
     "tsconfig.json": "c:tsconfig.json"
   },
   "dependencies": {
+    "auth0-js": "^8.2.0",
+    "auth0-lock": "^10.11.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "react": "^15.4.2",
@@ -39,6 +41,8 @@
     "@neoncity/common-js": "^0.0.11",
     "@neoncity/coverage-filter": "^0.0.7",
     "@neoncity/togemfury": "^0.0.9",
+    "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
+    "@types/auth0-lock": "^10.9.2",
     "@types/chai": "^3.4.34",
     "@types/es6-promise": "0.0.32",
     "@types/express": "^4.0.35",
