Loads of work. Loads more to do.

--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -8,7 +8,6 @@
         "noUnusedParameters": true,
         "strictNullChecks": true,
         "sourceMap": true,
-	"jsx": "react",
-	"allowSyntheticDefaultImports": true
+	"jsx": "react"
     }
 }
