--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "tsconfig.json": "c:tsconfig.json"
   },
   "dependencies": {
-    "auth0-js": "^8.2.0",
     "auth0-lock": "^10.11.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "mustache": "^2.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -42,12 +42,12 @@
     "@neoncity/coverage-filter": "^0.1.0",
     "@neoncity/identity-sdk-js": "^0.4.1",
     "@neoncity/togemfury": "^0.0.9",
-    "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "^10.9.2",
     "@types/chai": "^3.4.34",
     "@types/es6-promise": "0.0.32",
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.37",
+    "@types/mustache": "^0.8.29",
     "@types/node": "^7.0.1",
     "@types/react": "^15.0.2",
     "@types/react-dom": "^0.14.21",
