--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "mustache": "^2.3.0",
+    "query-string": "^4.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -42,6 +43,7 @@
     "@neoncity/coverage-filter": "^0.1.0",
     "@neoncity/identity-sdk-js": "^0.4.1",
     "@neoncity/togemfury": "^0.0.9",
+    "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "^10.9.2",
     "@types/chai": "^3.4.34",
     "@types/es6-promise": "0.0.32",
@@ -49,6 +51,7 @@
     "@types/mocha": "^2.2.37",
     "@types/mustache": "^0.8.29",
     "@types/node": "^7.0.1",
+    "@types/query-string": "^3.0.31",
     "@types/react": "^15.0.2",
     "@types/react-dom": "^0.14.21",
     "@types/react-redux": "^4.4.36",
