--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -41,7 +41,6 @@
     "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
-    "@neoncity/coverage-filter": "^0.1.0",
     "@neoncity/togemfury": "^0.0.9",
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "^10.9.2",
@@ -61,6 +60,7 @@
     "chai": "^3.5.0",
     "codecov": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
+    "coverage-filter": "^0.0.2",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
