--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -8,7 +8,7 @@
     "serve-dev": "tsc --watch & nodemon out/server/index.js",
     "serve-prod": "node out/server/index.js",
     "pretest": "npm run build",
-    "test": "npm run build && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- $(find out -name '*server*-test.js') && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
+    "test": "npm run build && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- $(find out -name '*-test.js') && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
     "push-coverage-to-codecov": "codecov -f ./out/coverage/coverage-filtered.json"
   },
   "respository": {
@@ -43,13 +43,13 @@
   "devDependencies": {
     "@neoncity/togemfury": "^0.0.9",
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
-    "@types/auth0-lock": "^10.9.2",
+    "@types/auth0-lock": "=10.9.2",
     "@types/chai": "^3.4.34",
     "@types/es6-promise": "0.0.32",
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.37",
     "@types/mustache": "^0.8.29",
-    "@types/node": "^7.0.1",
+    "@types/node": "=7.0.1",
     "@types/query-string": "^3.0.31",
     "@types/react": "^15.0.2",
     "@types/react-dom": "^0.14.21",
