--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -26,55 +26,56 @@
     "tsconfig.json": "c:tsconfig.json"
   },
   "dependencies": {
-    "@neoncity/common-js": "^0.14.4",
-    "@neoncity/identity-sdk-js": "^0.5.2",
-    "auth0-lock": "^10.11.0",
-    "es6-promise": "^4.0.5",
-    "express": "^4.14.0",
-    "mustache": "^2.3.0",
-    "query-string": "^4.3.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "redux": "^3.6.0",
-    "webpack-dev-middleware": "^1.9.0"
+    "@neoncity/common-js": "=1.0.0",
+    "@neoncity/identity-sdk-js": "=0.6.1",
+    "auth0-lock": "=10.11.0",
+    "es6-promise": "=4.0.5",
+    "express": "=4.14.0",
+    "mustache": "=2.3.0",
+    "query-string": "=4.3.2",
+    "raynor": "=0.1.2",
+    "react": "=15.4.2",
+    "react-dom": "=15.4.2",
+    "react-redux": "=5.0.2",
+    "react-router": "=3.0.2",
+    "redux": "=3.6.0",
+    "webpack-dev-middleware": "=1.9.0"
   },
   "devDependencies": {
-    "@neoncity/togemfury": "^0.0.9",
+    "@neoncity/togemfury": "=0.0.9",
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
-    "@types/chai": "^3.4.34",
-    "@types/es6-promise": "0.0.32",
-    "@types/express": "^4.0.35",
-    "@types/mocha": "^2.2.37",
-    "@types/mustache": "^0.8.29",
+    "@types/chai": "=3.4.34",
+    "@types/es6-promise": "=0.0.32",
+    "@types/express": "=4.0.35",
+    "@types/mocha": "=2.2.37",
+    "@types/mustache": "=0.8.29",
     "@types/node": "=7.0.1",
-    "@types/query-string": "^3.0.31",
-    "@types/react": "^15.0.2",
-    "@types/react-dom": "^0.14.21",
-    "@types/react-redux": "^4.4.36",
-    "@types/react-router": "^2.0.46",
-    "@types/webpack": "^2.2.2",
-    "@types/webpack-dev-middleware": "^1.9.1",
-    "chai": "^3.5.0",
-    "codecov": "^1.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "coverage-filter": "^0.0.2",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "istanbul": "^0.4.5",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.2",
-    "less-loader": "^2.2.3",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
-    "remap-istanbul": "^0.8.4",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^1.3.3",
-    "typescript": "^2.1.5",
-    "webpack": "^1.14.0",
-    "webpack-fail-plugin": "^1.0.5"
+    "@types/query-string": "=3.0.31",
+    "@types/react": "=15.0.2",
+    "@types/react-dom": "=0.14.21",
+    "@types/react-redux": "=4.4.36",
+    "@types/react-router": "=2.0.46",
+    "@types/webpack": "=2.2.2",
+    "@types/webpack-dev-middleware": "=1.9.1",
+    "chai": "=3.5.0",
+    "codecov": "=1.0.1",
+    "copy-webpack-plugin": "=4.0.1",
+    "coverage-filter": "=0.1.0",
+    "css-loader": "=0.26.1",
+    "extract-text-webpack-plugin": "=1.0.1",
+    "file-loader": "=0.9.0",
+    "istanbul": "=0.4.5",
+    "json-loader": "=0.5.4",
+    "less": "=2.7.2",
+    "less-loader": "=2.2.3",
+    "mocha": "=3.2.0",
+    "nodemon": "=1.11.0",
+    "remap-istanbul": "=0.8.4",
+    "style-loader": "=0.13.1",
+    "ts-loader": "=1.3.3",
+    "typescript": "=2.1.5",
+    "webpack": "=1.14.0",
+    "webpack-fail-plugin": "=1.0.5"
   }
 }
