--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - ADDRESS=0.0.0.0
   - PORT=10000
   - IDENTITY_SERVICE_HOST=null
+  - CORE_SERVICE_HOST=null
   - GEMFURY_USER=neoncity
   - AUTH0_CLIENT_ID=null
   - AUTH0_DOMAIN=null
