--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -32,10 +32,12 @@
     "auth0-lock": "=10.11.0",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
+    "moment": "=2.18.1",
     "mustache": "=2.3.0",
     "query-string": "=4.3.2",
     "raynor": "=0.1.2",
     "react": "=15.4.2",
+    "react-datepicker": "^0.44.0",
     "react-dom": "=15.4.2",
     "react-redux": "=5.0.2",
     "react-router": "=3.0.2",
@@ -54,6 +56,7 @@
     "@types/node": "=7.0.1",
     "@types/query-string": "=3.0.31",
     "@types/react": "=15.0.2",
+    "@types/react-datepicker": "^0.40.2",
     "@types/react-dom": "=0.14.21",
     "@types/react-redux": "=4.4.36",
     "@types/react-router": "=2.0.46",
