--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.11.2",
+  "version": "0.12.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -32,6 +32,7 @@
     "auth0-lock": "=10.11.0",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
+    "filepicker-js": "=2.4.18",
     "moment": "=2.18.1",
     "mustache": "=2.3.0",
     "query-string": "=4.3.2",
