--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "0.12.1",
+  "version": "0.13.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -26,9 +26,9 @@
     "tsconfig.json": "c:tsconfig.json"
   },
   "dependencies": {
-    "@neoncity/common-js": "=1.3.0",
-    "@neoncity/core-sdk-js": "=3.3.2",
-    "@neoncity/identity-sdk-js": "=1.2.5",
+    "@neoncity/common-js": "~1",
+    "@neoncity/core-sdk-js": "~4",
+    "@neoncity/identity-sdk-js": "~1",
     "auth0-lock": "=10.11.0",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
@@ -46,7 +46,7 @@
     "webpack-dev-middleware": "=1.9.0"
   },
   "devDependencies": {
-    "@neoncity/togemfury": "=0.0.9",
+    "@neoncity/togemfury": "~0",
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
     "@types/chai": "=3.4.34",
