--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/chai": "=3.4.34",
     "@types/es6-promise": "=0.0.32",
     "@types/express": "=4.0.35",
+    "@types/facebook-js-sdk": "=2.8.1",
     "@types/mocha": "=2.2.37",
     "@types/mustache": "=0.8.29",
     "@types/node": "=7.0.1",
