--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
   },
   "dependencies": {
     "@neoncity/common-js": "~1",
+    "@neoncity/common-server-js": "~1",
     "@neoncity/core-sdk-js": "~4",
     "@neoncity/identity-sdk-js": "~2",
     "auth0-lock": "=10.11.0",
+    "async-middleware": "=1.0.2",      
+    "cookie-parser": "=1.4.3",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
     "filepicker-js": "=2.4.18",
+    "http-status-codes": "=1.1.6",
     "moment": "=2.18.1",
     "mustache": "=2.3.0",
     "query-string": "=4.3.2",
@@ -50,9 +54,11 @@
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
     "@types/chai": "=3.4.34",
+    "@types/cookie-parser": "=1.3.30",
     "@types/es6-promise": "=0.0.32",
     "@types/express": "=4.0.35",
     "@types/facebook-js-sdk": "=2.8.1",
+    "@types/http-status-codes": "=1.0.29",
     "@types/mocha": "=2.2.37",
     "@types/mustache": "=0.8.29",
     "@types/node": "=7.0.1",
