Big changes for new infrastructure

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "=4.14.0",
     "filepicker-js": "=2.4.18",
     "http-status-codes": "=1.1.6",
+    "isomorphic-fetch": "=2.2.1",      
     "moment": "=2.18.1",
     "mustache": "=2.3.0",
     "query-string": "=4.3.2",
@@ -59,6 +60,7 @@
     "@types/express": "=4.0.35",
     "@types/facebook-js-sdk": "=2.8.1",
     "@types/http-status-codes": "=1.0.29",
+    "@types/isomorphic-fetch": "=0.0.32",
     "@types/mocha": "=2.2.37",
     "@types/mustache": "=0.8.29",
     "@types/node": "=7.0.1",
