--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - CORE_SERVICE_EXTERNAL_HOST=null
   - GEMFURY_USER=neoncity
   - AUTH0_CLIENT_ID=null
+  - AUTH0_CLIENT_SECRET=null
   - AUTH0_DOMAIN=null
   - AUTH0_CALLBACK_URI=null
   - FILESTACK_KEY=null
