--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -31,12 +31,12 @@
     "@neoncity/core-sdk-js": "~4",
     "@neoncity/identity-sdk-js": "~2",
     "auth0-lock": "=10.11.0",
-    "async-middleware": "=1.0.2",      
+    "async-middleware": "=1.0.2",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
     "filepicker-js": "=2.4.18",
     "http-status-codes": "=1.1.6",
-    "isomorphic-fetch": "=2.2.1",      
+    "isomorphic-fetch": "=2.2.1",
     "moment": "=2.18.1",
     "mustache": "=2.3.0",
     "query-string": "=4.3.2",
@@ -83,6 +83,7 @@
     "less-loader": "=2.2.3",
     "mocha": "=3.2.0",
     "nodemon": "=1.11.0",
+    "raw-loader": "=0.5.1",
     "remap-istanbul": "=0.8.4",
     "style-loader": "=0.13.1",
     "ts-loader": "=1.3.3",
