--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@neoncity/common-server-js": "~3",
     "@neoncity/core-sdk-js": "~4",
     "@neoncity/identity-sdk-js": "~2",
-    "auth0-lock": "=10.11.0",
     "async-middleware": "=1.0.2",
+    "auth0-lock": "=10.11.0",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
     "filepicker-js": "=2.4.18",
+    "history": "=3.3.0",
     "http-status-codes": "=1.1.6",
     "isomorphic-fetch": "=2.2.1",
     "moment": "=2.18.1",
