--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@neoncity/identity-sdk-js": "~2",
     "async-middleware": "=1.0.2",
     "auth0-lock": "=10.11.0",
+    "continuation-local-storage": "=3.2.0",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
     "filepicker-js": "=2.4.18",
@@ -55,6 +56,7 @@
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
     "@types/chai": "=3.4.34",
+    "@types/continuation-local-storage": "=3.2.1",
     "@types/es6-promise": "=0.0.32",
     "@types/express": "=4.0.35",
     "@types/facebook-js-sdk": "=2.8.1",
