--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -49,6 +49,7 @@
     "react-redux": "=5.0.2",
     "react-router": "=3.0.2",
     "redux": "=3.6.0",
+    "serialize-javascript": "^1.3.0",
     "webpack-dev-middleware": "=1.9.0"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "@types/react-dom": "=0.14.21",
     "@types/react-redux": "=4.4.36",
     "@types/react-router": "=2.0.46",
+    "@types/serialize-javascript": "=1.3.1",
     "@types/webpack": "=2.2.2",
     "@types/webpack-dev-middleware": "=1.9.1",
     "chai": "=3.5.0",
