Work with Origin

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - CORE_SERVICE_HOST=null
   - IDENTITY_SERVICE_EXTERNAL_HOST=null
   - CORE_SERVICE_EXTERNAL_HOST=null
+  - ORIGIN=null
   - GEMFURY_USER=neoncity
   - AUTH0_CLIENT_ID=null
   - AUTH0_CLIENT_SECRET=null
