--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "2.11.0",
+  "version": "2.12.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -46,6 +46,7 @@
     "react": "=15.4.2",
     "react-datepicker": "^0.44.0",
     "react-dom": "=15.4.2",
+    "react-helmet": "=5.1.3",
     "react-redux": "=5.0.2",
     "react-router": "=3.0.2",
     "redux": "=3.6.0",
@@ -70,6 +71,7 @@
     "@types/react": "=15.0.2",
     "@types/react-datepicker": "^0.40.2",
     "@types/react-dom": "=0.14.21",
+    "@types/react-helmet": "=5.0.2",
     "@types/react-redux": "=4.4.36",
     "@types/react-router": "=2.0.46",
     "@types/serialize-javascript": "=1.3.1",
