--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "2.13.0",
+  "version": "2.14.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -82,7 +82,7 @@
     "copy-webpack-plugin": "=4.0.1",
     "coverage-filter": "=0.1.0",
     "css-loader": "=0.26.1",
-    "extract-text-webpack-plugin": "=1.0.1",
+    "extract-text-webpack-plugin": "=2.1.2",
     "file-loader": "=0.9.0",
     "istanbul": "=0.4.5",
     "json-loader": "=0.5.4",
@@ -95,7 +95,6 @@
     "style-loader": "=0.13.1",
     "ts-loader": "=1.3.3",
     "typescript": "=2.1.5",
-    "webpack": "=1.14.0",
-    "webpack-fail-plugin": "=1.0.5"
+    "webpack": "=2.6.1"
   }
 }
