Shave off 200Kb of the binary size by removing unneeded moment.js locales

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "NeonCity team",
   "scripts": {
     "build": "tsc && webpack",
+    "build-analyze": "tsc && webpack --json > out/build-stats.json",      
     "serve-dev": "tsc --watch & nodemon out/server/index.js",
     "serve-prod": "node out/server/index.js",
     "pretest": "npm run build",
