--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "NeonCity team",
   "scripts": {
     "build": "tsc && webpack -p",
-    "build-analyze": "tsc && webpack -p --json > out/build-stats.json",      
+    "build-analyze": "tsc && webpack -p --json > out/build-stats.json",
     "serve-dev": "tsc --watch & nodemon out/server/index.js",
     "serve-prod": "node out/server/index.js",
     "pretest": "npm run build",
@@ -78,6 +78,7 @@
     "@types/serialize-javascript": "=1.3.1",
     "@types/webpack": "=2.2.2",
     "@types/webpack-dev-middleware": "=1.9.1",
+    "@types/webpack-env": "=1.13.0",
     "chai": "=3.5.0",
     "codecov": "=1.0.1",
     "copy-webpack-plugin": "=4.0.1",
