--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@neoncity/identity-sdk-js": "~4",
     "async-middleware": "=1.0.2",
     "auth0-lock": "=10.11.0",
+    "compression": "=1.6.2",
     "continuation-local-storage": "=3.2.0",
     "es6-promise": "=4.0.5",
     "express": "=4.14.0",
@@ -59,6 +60,7 @@
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
     "@types/chai": "=3.4.34",
+    "@types/compression": "=0.0.33",
     "@types/continuation-local-storage": "=3.2.1",
     "@types/es6-promise": "=0.0.32",
     "@types/express": "=4.0.35",
