--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc && webpack -p",
     "build-analyze": "tsc && webpack -p --json > out/build-stats.json",
-    "serve-dev": "tsc --watch & nodemon out/server/index.js",
+    "build-analyze2": "tsc && webpack --profile --progress",
+    "serve-dev": "tsc --watch & node out/server/index.js",
     "serve-prod": "node out/server/index.js",
     "pretest": "npm run build",
     "test": "npm run build && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- $(find out -name '*-test.js') && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
@@ -97,7 +98,7 @@
     "raw-loader": "=0.5.1",
     "remap-istanbul": "=0.8.4",
     "style-loader": "=0.13.1",
-    "ts-loader": "=1.3.3",
+    "ts-loader": "=2.2.0",
     "typescript": "=2.1.5",
     "webpack": "=2.6.1"
   }
