--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "style-loader": "=0.13.1",
     "ts-loader": "=2.2.0",
     "typescript": "=2.1.5",
+    "url-loader": "^0.5.9",
     "webpack": "=2.6.1"
   }
 }
