--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@neoncity/identity-sdk-js": "~4",
     "async-middleware": "=1.0.2",
     "auth0-lock": "=10.11.0",
+    "classnames": "=2.2.5",
     "compression": "=1.6.2",
     "continuation-local-storage": "=3.2.0",
     "es6-promise": "=4.0.5",
@@ -44,16 +45,17 @@
     "isomorphic-fetch": "=2.2.1",
     "moment": "=2.18.1",
     "mustache": "=2.3.0",
+    "normalize.css": "=7.0.0",
     "query-string": "=4.3.2",
     "raynor": "=0.8.0",
     "react": "=15.4.2",
-    "react-datepicker": "^0.44.0",
+    "react-datepicker": "=0.44.0",
     "react-dom": "=15.4.2",
     "react-helmet": "=5.1.3",
     "react-redux": "=5.0.2",
     "react-router": "=3.0.2",
     "redux": "=3.6.0",
-    "serialize-javascript": "^1.3.0",
+    "serialize-javascript": "=1.3.0",
     "webpack-dev-middleware": "=1.9.0"
   },
   "devDependencies": {
@@ -61,6 +63,7 @@
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
     "@types/chai": "=3.4.34",
+    "@types/classnames": "=2.2.0",
     "@types/compression": "=0.0.33",
     "@types/continuation-local-storage": "=3.2.1",
     "@types/es6-promise": "=0.0.32",
@@ -73,7 +76,7 @@
     "@types/node": "=7.0.1",
     "@types/query-string": "=3.0.31",
     "@types/react": "=15.0.2",
-    "@types/react-datepicker": "^0.40.2",
+    "@types/react-datepicker": "=0.40.2",
     "@types/react-dom": "=0.14.21",
     "@types/react-helmet": "=5.0.2",
     "@types/react-redux": "=4.4.36",
@@ -100,7 +103,7 @@
     "style-loader": "=0.13.1",
     "ts-loader": "=2.2.0",
     "typescript": "=2.1.5",
-    "url-loader": "^0.5.9",
+    "url-loader": "=0.5.9",
     "webpack": "=2.6.1"
   }
 }
