--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-datepicker": "=0.44.0",
     "react-dom": "=15.4.2",
     "react-helmet": "=5.1.3",
+    "react-markdown": "=2.5.0",
     "react-redux": "=5.0.2",
     "react-router": "=3.0.2",
     "redux": "=3.6.0",
