--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "2.28.8",
+  "version": "2.28.9",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -53,9 +53,9 @@
     "react-dom": "=15.4.2",
     "react-helmet": "=5.1.3",
     "react-markdown": "=2.5.0",
-    "react-md-editor": "=0.2.2",
     "react-redux": "=5.0.2",
     "react-router": "=3.0.2",
+    "react-simplemde-editor": "=3.6.11",
     "redux": "=3.6.0",
     "serialize-javascript": "=1.3.0",
     "webpack-dev-middleware": "=1.9.0"
