--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoncity/causefe",
-  "version": "2.28.12",
+  "version": "3.0.0",
   "description": "The main frontend, where causes are managed and viewed.",
   "author": "NeonCity team",
   "scripts": {
@@ -30,10 +30,11 @@
   "dependencies": {
     "@neoncity/common-js": "~1",
     "@neoncity/common-server-js": "~3",
-    "@neoncity/core-sdk-js": "~6",
-    "@neoncity/identity-sdk-js": "~4",
+    "@neoncity/core-sdk-js": "~7",
+    "@neoncity/identity-sdk-js": "~5",
     "async-middleware": "=1.0.2",
     "auth0-lock": "=10.11.0",
+    "body-parser": "=1.17.1",
     "classnames": "=2.2.5",
     "compression": "=1.6.2",
     "continuation-local-storage": "=3.2.0",
@@ -64,6 +65,7 @@
     "@neoncity/togemfury": "~0",
     "@types/auth0-js": "git+https://git@github.com/neoncity/auth0-js-with-v7.git",
     "@types/auth0-lock": "=10.9.2",
+    "@types/body-parser": "=1.16.0",
     "@types/chai": "=3.4.34",
     "@types/classnames": "=2.2.0",
     "@types/compression": "=0.0.33",
