--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc && webpack -p",
     "build-analyze": "tsc && webpack -p --json > out/build-stats.json",
     "build-analyze2": "tsc && webpack --profile --progress",
-    "serve-dev": "tsc --watch & node out/server/index.js",
-    "serve-prod": "node out/server/index.js",
+    "serve-dev": "tsc --watch & node out/server/index.js | bunyan --output simple",
+    "serve-prod": "node out/server/index.js | bunyan --output simple",
     "pretest": "npm run build",
     "test": "npm run build && istanbul cover --config ./.istanbul.yml ./node_modules/mocha/bin/_mocha -- $(find out -name '*-test.js') && remap-istanbul -i ./out/coverage/coverage-final.json -o ./out/coverage/coverage-remapped.json && coverage-filter -i ./out/coverage/coverage-remapped.json -o ./out/coverage/coverage-filtered.json",
     "push-coverage-to-codecov": "codecov -f ./out/coverage/coverage-filtered.json"
