Add error logging with rollbar.
And a host of fixes to allow latest version of typescript and other packages.
I didn't mean to bundle them with this change, but that's the way it is.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ env:
   - AUTH0_CALLBACK_URI=null
   - LOGGLY_TOKEN=null
   - LOGGLY_SUBDOMAIN=null
+  - ROLLBAR_SERVER_TOKEN=null
+  - ROLLBAR_CLIENT_TOKEN=null
   - FILESTACK_KEY=null
   - FACEBOOK_APP_ID=null
   # GEMFURY_API_KEY=???
