--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -9,7 +8,14 @@
         "noUnusedParameters": true,
         "strictNullChecks": true,
         "sourceMap": true,
-	"jsx": "react",
+	      "jsx": "react",
         "experimentalDecorators": true
-    }
+    },
+    "include": [
+        "./src/client/**/*",
+        "./src/shared/**/*"
+    ],
+    "exclude": [
+        "./src/shared/config.ts"
+    ]
 }
